--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "airtight-css-lint": "~0.3.1",
     "loader-utils": "^0.2.16",
-    "object-assign": "^4.1.1"
+    "object-assign": "^4.1.1",
+    "source-map": "^0.5.6"
   }
 }
